# deepiri-pkg-version-manager

./: .gitignore  README.md  dep-config.json  pyproject.toml
.github/: pull_request_template.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  update_deps.yml
deepiri_pkg_version_manager/: __init__.py  utils.py
deepiri_pkg_version_manager/cli/: main.py  tui.py
deepiri_pkg_version_manager/graph/: dependency_graph.py
deepiri_pkg_version_manager/legacy/: auto_merge.py  generate_cli_graph.py
deepiri_pkg_version_manager/scanners/: org_scanner.py  repo_scanner.py
deepiri_pkg_version_manager/storage/: db.py
deepiri_pkg_version_manager/tags/: tag_manager.py  tag_models.py
deepiri_pkg_version_manager/ui/: display.py  graphDisplay.py  prompts.py
fixtures/test_graph/: deps.json  tags.json
samples/: sample_dep_workflow.txt
scripts/: generate_config.py
