[project]
name = "deepiri-pkg-version-manager"
version = "0.1.0"
description = "Package version manager and dependency graph tool for Deepiri platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Deepiri"}]
license = {text = "MIT"}
keywords = ["deepiri", "dependency", "version", "package-manager"]
dependencies = [
    "PySide6>=6.0.0",
    "packaging>=23.0",
    "networkx>=3.0",
    "rich>=13.0",
    "typer>=0.9.0",
    "textual>=0.40.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiofiles>=23.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
dtm = "deepiri_pkg_version_manager.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepiri_pkg_version_manager*"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
